Add content and personalized information

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -115,7 +115,7 @@ textarea {
 }
 optgroup {
   font-weight: 700;
-}
+} 
 button,
 input {
   overflow: visible;
@@ -200,7 +200,7 @@ html {
 }
 body {
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: georgia, serif;
+  font-family: "Raleway";
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
