--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -49,9 +49,15 @@ small {
 
 
 @media only screen and (max-width: 850px) {
-  .bottom-bar{display: flex;}
+  .bottom-bar{
+    display: flex;
+    margin-bottom: 1em;
+  }
   .social-links{display: none;}
-  .mobile-pages-main{display: block;}
+  .mobile-pages-main{
+    display: block;
+    padding: 1em;
+  }
   .mobile-bio-main{
     display: flex;
     flex-direction: row;
