--- a/src/templates/blog-post.css
+++ b/src/templates/blog-post.css
@@ -11,7 +11,14 @@
     width: 90%;
 }
 
+.post-main {
+  width: 90%;
+}
 
+.gatsby-highlight {
+  font-size: .8rem;
+  margin-bottom: 1.45rem;
+}
 
 
 @media only screen and (max-width: 850px) {
