--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,5 @@
 .head-main {
   width: 100%;
-  position: sticky;
   z-index: 1;
   top: 0;
   display: flex;
@@ -60,7 +59,10 @@ small {
   }
   .mobile-bio-main{
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    align-items: center;
+  }
+  .mobile-bio-main > * {
+    margin-left: 10%;
+    margin-bottom: 0;
   }
 }
