--- a/src/components/consent-banner/consent-banner.css
+++ b/src/components/consent-banner/consent-banner.css
@@ -3,7 +3,7 @@
 .consent-banner {
   display: flex;
   justify-content: center;
-  position: sticky;
+  position: fixed;
   width: 100vw;
   padding: 10px;
   bottom: 0;
