--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,6 +4,7 @@
   top: 0;
   display: flex;
   flex-direction: column;
+  background: linear-gradient(45deg, #1e9e8c, #0c0c0c)
 }
 
 .head-elements {
@@ -27,9 +28,9 @@
   justify-content: space-around;
 }
 .mobile-pages-main {
-  width: 100%;
   background: white;
   display: none;
+  flex-grow: 1;
 }
 .head-logo {
   font-family: "Raleway";
@@ -46,23 +47,23 @@ small {
 }
 
 
-
 @media only screen and (max-width: 850px) {
   .bottom-bar{
     display: flex;
     margin-bottom: 1em;
+    background: transparent;
   }
   .social-links{display: none;}
   .mobile-pages-main{
-    display: block;
     padding: 1em;
+    display: flex;
+    justify-content: center;
+    flex-flow: column;
   }
   .mobile-bio-main{
     display: flex;
     align-items: center;
-  }
-  .mobile-bio-main > * {
-    margin-left: 10%;
-    margin-bottom: 0;
+    padding: 1em;
+    width: 50%;
   }
 }
